# NeuroRAG

./: .env.example  LICENSE  Makefile  README.md  SETUP.md  docker-compose.override.yml  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
config/: api_gateway.yaml  compliance_rules.yaml  prometheus.yml  vector_db.yaml
infra/ci_cd/: github_actions.yml
infra/k8s_deployments/: vector_service.yaml
scripts/: benchmark_vector_search.py  cache_warmup.sh  health_check.py  ingest_data.py  setup.sh
src/: App.tsx
src/api_gateway/: Dockerfile  app.py
src/api_gateway/middleware/: rate_limiter.py
src/api_gateway/utils/: logger.py
src/components/: ComplianceAudit.tsx  DocumentManager.tsx  Header.tsx  MetricsDashboard.tsx  QueryInterface.tsx  SystemStatus.tsx
src/rag_orchestration/: Dockerfile  main.py
src/services/: ragService.ts  vectorStore.ts
src/types/: index.ts
src/vector_service/: CMakeLists.txt  Dockerfile.python  main.py
src/vector_service/include/: vector_search.h
src/vector_service/src/: main.cpp
supabase/migrations/: 20250802121247_still_feather.sql
